Changed ngRoute to ui-route

--- a/WebTrivialWiki/templates/login.html
+++ b/WebTrivialWiki/templates/login.html
@@ -2,3 +2,4 @@
     <input type="text" placeholder="Username" ng-model="username" />
     <input type="password" placeholder="Password" ng-model="password" />
 </form>
+<button ng-click="login()">Login</button>
