--- a/WebTrivialWiki/app/views/User/login.html
+++ b/WebTrivialWiki/app/views/User/login.html
@@ -1,11 +1,14 @@
-﻿<form class="form">
-    <input type="text" placeholder="Username" ng-model="username" />
-    <input type="password" placeholder="Password" ng-model="password" />
-</form>
-<button ng-click="addFacebook()">Login</button>
-
-<!--<div class="fb-like"
-     data-share="true"
-     data-width="450"
-     data-show-faces="true">
-</div>-->
+﻿<div class="loginBackground">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <div class="logo"></div>
+    <div class="login-block">
+        <h1>Login</h1>
+        <input id="username" type="text" placeholder="Username" ng-model="username"/>
+        <input id="password" type="password" placeholder="Password" ng-model="password"/>
+        <button title="Login" ng-click="login()">Start playing</button>
+        <button class="signUpButton" title="Register" ng-click="registerNewAccount()">New to the site</button>
+        <div id="facebookLink">
+            <i class="fa fa-facebook" title="Login with facebook" ng-click="loginWithFacebook()"></i>
+        </div>
+    </div>
+</div>
