--- a/WebTrivialWiki/app/views/User/signUp.html
+++ b/WebTrivialWiki/app/views/User/signUp.html
@@ -1,1 +1,20 @@
-﻿
+﻿<div class="loginBackground">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <div class="login-block registerPanel">
+        <h1>Register new account</h1>
+        <input id="username" type="text" placeholder="Username" ng-model="username" />
+        <input id="password" type="password" placeholder="Password" ng-model="password"/>
+        <input id="password1" type="password" placeholder="Repeat password" ng-model="repeatedPassword"/>
+        <p class="errorMessage" ng-show="passwordsDontMatch()">Passwords don't match!</p>
+        <input id="email" type="email" placeholder="Email" ng-model="email" />
+        <input id="firstName" type="text" placeholder="First name" ng-model="firstName"/>
+        <input id="lastName" type="text" placeholder="Last name" ng-model="lastName" />
+
+        <button title="Login" ng-click="registerNewAccount()">Register</button>
+        <button class="cancelRegister" title="Cancel" ng-click="returnToLoginPage()">Cancel</button>
+
+        <div id="facebookLink">
+            <i class="fa fa-facebook" title="Register with facebook" ng-click=""></i>
+        </div>
+    </div>
+</div>
