--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -47,20 +47,12 @@
     width:27%;
     height:70px;
     right:5%;
-    background-color:#000000;
-    background-color:rgba(0,0,0,0.2);
-    -ms-border-radius:5px;
-    border-radius:0 0 5px 5px;
-    border-bottom:1px solid #ff656c;
-    border-left:1px solid #ff656c;
-    border-right:1px solid #ff656c;
-    margin: 0 auto;
     z-index:3;
 }
 
 .loginButton {
-    width: 46%;
-    height: 60%;
+    width: 40%;
+    height: 30%;
     margin-top:18px;
     margin-left:7%;
     background: #ff656c; 
@@ -68,10 +60,12 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     border: 1px solid #e15960;
+    -ms-border-radius:5px;
+    border-radius:5px;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 12px;
     font-family: Montserrat;
     outline: none;
     cursor: pointer;
@@ -82,8 +76,8 @@
 }
 
 .newInGameButton {
-    width:46%;
-    height:60%;
+    width:40%;
+    height:30%;
     margin-top:18px;
     margin-left:2%;
     background: #65b9ff;
@@ -91,10 +85,12 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     border: 1px solid #4199E3;
+    -ms-border-radius:5px;
+    border-radius:5px;
     color:#fff;
     font-weight: bold;
     text-transform: uppercase;
-    font-size:14px;
+    font-size:12px;
     font-family:Montserrat;
     outline: none;
     cursor: pointer;
