Made web header resizable after scroll

--- a/WebTrivialWiki/app/views/about.html
+++ b/WebTrivialWiki/app/views/about.html
@@ -1,1 +1,36 @@
+aaa
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
+<p>This is the about view.</p>
 <p>This is the about view.</p>
