--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -1,10 +1,57 @@
 ﻿.headerContainer {
-    position: relative;
-    height:200px;
+    position: fixed;
+    width:100%;
+    height:120px;
     display: block;
-    margin-top:-8px;
     margin-left:-8px;
     margin-right:-8px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.headerContainer.smaller {
+        height:60px;
+    }
+
+.navigation-bar {
+    display: inline-block !important;
+    float: right;
+    margin-top:45px;
+    margin-right: 70px;
+    font-family: Montserrat;
+    font-size: 20px;
+    -webkit-transition:all 0.3s;
+    -moz-transition:all 0.3s;
+    -ms-transition:all 0.3s;
+    -o-transition:all 0.3s;
+    transition:all 0.3s;
+}
+
+.navigation-bar li {
+        margin-left:10px;
+        margin-right:10px;
+        display:inline !important;
+    }
+    .navigation-bar li a{
+        color:#ccc;
+        display: inline; 
+    }
+    .navigation-bar a:hover {
+        text-decoration: none;
+        cursor: pointer;
+    }
+    .navigation-bar.smaller {
+        margin-top:15px;
+        font-size: 15px;
+    }
+
+.wikiLogo {
+    height:100%;
+    margin-bottom: 30px;
+    display: block;
     background: url('../images/blackBackground.jpg');
     -ms-background-size: cover;
     background-size: cover;
@@ -12,91 +59,52 @@
     -o-background-position-y: center;
     background-position-y: center;
 }
-
-.wikiLogo {
-    position: absolute;
-    bottom:0;
-}
-
-.wikiLogo img{
-    max-height:160px;
-    max-width:160px;
+    
+ .wiki-logo-image {
+    height:80px;
+    width:80px;
     margin-left:100px;
-    margin-bottom:10px;
-}
+    margin-top: 20px;
+     -webkit-transition:all 0.3s;
+     -moz-transition:all 0.3s;
+     -ms-transition:all 0.3s;
+     -o-transition:all 0.3s;
+     transition:all 0.3s;
+ }
 
-.wikiLogo img:hover {
-    cursor: pointer;
-}
+.wiki-logo-image.smaller {
+        height:50px;
+        width:50px;
+        margin-top:5px;
+    }
+    .wiki-logo-image img:hover {
+        cursor: pointer;
+    }
 
 .wikiTitle {
-    position: relative;
-    color: #ccc;
-    top:5px;
-    font-family: Montserrat;
-    font-size: 50px;
-}
-
-.wikiTitle:hover {
-    cursor: pointer;
-    color:#fff;
-}
-
-.loginHomeContainer {
+    margin-top:30px;
+    margin-left:15px;
     position: absolute;
-    width:27%;
-    height:70px;
-    right:5%;
-    z-index:3;
-}
-
-.loginButton {
-    width: 40%;
-    height: 30%;
-    margin-top:18px;
-    margin-left:7%;
-    background: #ff656c; 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #e15960;
-    -ms-border-radius:5px;
-    border-radius:5px;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 12px;
+    color: #ccc;
     font-family: Montserrat;
-    outline: none;
-    cursor: pointer;
+    font-size: 40px;
+    -webkit-transition:all 0.3s;
+    -moz-transition:all 0.3s;
+    -ms-transition:all 0.3s;
+    -o-transition:all 0.3s;
+    transition:all 0.3s;
 }
 
-.loginButton:hover {
-    background: #ff7b81;
-}
+.wikiTitle.smaller {
+        margin-top:8px;
+        font-size:30px
+    }
+    .wikiTitle:hover {
+        cursor: pointer;
+        color:#fff;
+    }
 
-.newInGameButton {
-    width:40%;
-    height:30%;
-    margin-top:18px;
-    margin-left:2%;
-    background: #65b9ff;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #4199E3;
-    -ms-border-radius:5px;
-    border-radius:5px;
-    color:#fff;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size:12px;
-    font-family:Montserrat;
-    outline: none;
-    cursor: pointer;
+.hvr-underline-from-center:before {
+    height:2px;
+    background:#ccc;
 }
-
-.newInGameButton:hover {
-    background: #7fc5ff;
-}
-
