--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -1,10 +1,11 @@
 ﻿.headerContainer {
+    top:0;
     position: fixed;
     width:100%;
     height:120px;
     display: block;
-    margin-left:-8px;
-    margin-right:-8px;
+    /*margin-left:-8px;*/
+    /*margin-right:-8px;*/
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
@@ -12,7 +13,9 @@
     transition: all 0.3s;
 }
 
-.headerContainer.smaller {
+    .headerContainer.smaller {
+        -ms-opacity:0.9;
+        opacity:0.9;
         height:60px;
     }
 
@@ -63,7 +66,7 @@
  .wiki-logo-image {
     height:80px;
     width:80px;
-    margin-left:100px;
+    margin-left:8%;
     margin-top: 20px;
      -webkit-transition:all 0.3s;
      -moz-transition:all 0.3s;
@@ -108,3 +111,17 @@
     height:2px;
     background:#ccc;
 }
+
+@media (max-width: 800px) {
+    .headerContainer {
+        width:100%;
+    }
+    .wikiLogo {
+        width:150%;
+    }
+    .navigation-bar{
+        display: none !important;
+    }
+}
+
+
