--- a/WebTrivialWiki/app/styles/loginStyles.css
+++ b/WebTrivialWiki/app/styles/loginStyles.css
@@ -1,4 +1,4 @@
-﻿.loginBackground {
+﻿/*.loginBackground {
     position: fixed;
     top:0px;
     left:0px;
@@ -10,14 +10,14 @@
     background-size: cover;
     font-family:Montserrat;
     overflow-y: auto;
-}
+}*/
 
-.logo {
+/*.logo {
     width:100%;
     height:36px;
     background: url('http://i.imgur.com/fd8Lcso.png') no-repeat;
     margin: 30px auto;
-}
+}*/
 
 .login-block {
     width:100%;
@@ -157,6 +157,7 @@
 .errorMessage {
     margin-top:-5px !important;
     margin-left:5px;
-    font-size:13px;
+    font-size:12px;
     color:#e15960;
+    font-family: Montserrat;
 }
