--- a/WebTrivialWiki/app/styles/loginStyles.css
+++ b/WebTrivialWiki/app/styles/loginStyles.css
@@ -23,9 +23,7 @@
     width:100%;
     padding:20px;
     background:#fff;
-    -ms-border-radius:5px;
-    border-radius:5px;
-    border-top:5px solid #ff656c;
+    border-top:5px solid #cc1935;
     margin: 0 auto;
 }
 
@@ -44,8 +42,6 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    -ms-border-radius: 5px;
-    border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 20px;
     font-size: 14px;
@@ -91,19 +87,17 @@
 }
 
 .login-block input:active, .login-block input:focus {
-    border: 1px solid #ff656c;
+    border: 1px solid #cc1935;
 }
 
 .login-block button {
     width: 100%;
     height: 40px;
-    background: #ff656c;
+    background: #cc1935;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    -ms-border-radius: 5px;
-    border-radius: 5px;
-    border: 1px solid #e15960;
+    border: 1px solid #cc1935;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
@@ -114,7 +108,7 @@
 }
 
 .login-block button:hover {
-    background: #ff7b81;
+    background: #DD425A;
 }
 
 #facebookLink {
