--- a/WebTrivialWiki/app/styles/settings/settings.css
+++ b/WebTrivialWiki/app/styles/settings/settings.css
@@ -210,18 +210,22 @@ height: 100%;
 }
 
 .panel-heading div{
-    display: inline;
+	display: inline;
 }
 
 .panel-heading i {
-    top: 3px;
+	top: 3px;
 }
 
 .panel-heading span {
-    margin-left: -15px;
+	margin-left: -15px;
 }
 
 .panel-heading i, .panel-heading span {
 	color: white;
-    font-size: 20px;
+	font-size: 20px;
+}
+
+.image-uploader {
+	display: none !important;
 }
