--- a/DestkopTrivialWiki/DestkopTrivialWiki/Login.xaml
+++ b/DestkopTrivialWiki/DestkopTrivialWiki/Login.xaml
@@ -3,14 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DestkopTrivialWiki"
-        mc:Ignorable="d"
-        Title="Login" Height="300" Width="300">
-    <Grid>
-        <TextBox x:Name="username" HorizontalAlignment="Left" Height="23" Margin="90,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="password" HorizontalAlignment="Left" Height="23" Margin="90,112,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="125,74,0,0" TextWrapping="Wrap" Text="Login" VerticalAlignment="Top"/>
-        <Button x:Name="button" Content="Login" HorizontalAlignment="Left" Margin="110,191,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-
-    </Grid>
+        xmlns:local="clr-namespace:DestkopTrivialWiki" Width="300" Height="350"
+        ResizeMode="NoResize"
+        mc:Ignorable="d">
+    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center">
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="10,10,10,10" TextWrapping="Wrap" Text="Login" VerticalAlignment="Center"/>
+        <TextBox x:Name="username" HorizontalAlignment="Center" Margin="10,10,10,10" TextWrapping="Wrap" Width="100" Text="" VerticalAlignment="Center"/>
+        <TextBox x:Name="password" HorizontalAlignment="Center" Margin="10,10,10,10" TextWrapping="Wrap" Width="100" Text="" VerticalAlignment="Center"/>
+        <Button x:Name="button" Content="Login" HorizontalAlignment="Center" Margin="10,10,10,10" VerticalAlignment="Center" Click="button_Click"/>
+    </StackPanel>
 </Window>
