Finished User Management

--- a/DestkopTrivialWiki/DestkopTrivialWiki/MainWindow.xaml
+++ b/DestkopTrivialWiki/DestkopTrivialWiki/MainWindow.xaml
@@ -22,21 +22,28 @@
         </Menu>
         <DataGrid AutoGenerateColumns="False" 
           Grid.Row="1"
+          BeginningEdit="dataGrid1_BeginningEdit"
           HorizontalAlignment="Stretch" 
+          HorizontalContentAlignment="Stretch"
+          ColumnWidth="*"
           Name="dataGrid1" 
           VerticalAlignment="Stretch">
-            <DataGrid.Columns >
-                <DataGridTextColumn Binding="{Binding Path=Name}" MinWidth="50" />
-                <DataGridTextColumn Binding="{Binding Path=Email}" MinWidth="50" />
-                <DataGridTextColumn Binding="{Binding Path=Points}" MinWidth="50" />
-                <DataGridTextColumn Binding="{Binding Path=Rank}" MinWidth="50" />
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name"     Binding="{Binding Path=Name}" MinWidth="50" />
+                <DataGridTextColumn Header="Email"    Binding="{Binding Path=Email}" MinWidth="50" />
+                <DataGridTextColumn Header="Points"   Binding="{Binding Path=Points}" MinWidth="50" />
+                <DataGridTextColumn Header="Rank"     Binding="{Binding Path=Rank}" MinWidth="50" />
+                <DataGridTextColumn Header="Role"     Binding="{Binding Path=Role}" MinWidth="50" />
+                <DataGridTextColumn Header="Password" Binding="{Binding Path=Password}" MinWidth="50" />
             </DataGrid.Columns>
         </DataGrid>
 
         <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,0,10,0">
-            <Button Margin="0,10,0,10" Name="Add" Click="AddUser_Click">Add</Button>
-            <Button Margin="0,10,0,10" Name="Delete">Delete</Button>
-            <Button Margin="0,10,0,10" Name="Update" Click="Update_Click">Update</Button>
+            <Button Margin="0,10,0,10" Name="AddBtn" Click="AddUser_Click">Add</Button>
+            <Button Margin="0,10,0,10" Name="DeleteBtn" Click="Delete_Click">Delete</Button>
+            <Button Margin="0,10,0,10" Name="UpdateBtn" Click="Update_Click">Update</Button>
+            <Button Margin="0,10,0,10" Name="ResetBtn" Click="ResetBtn_Click">Reset</Button>
+            <Button Margin="0,10,0,10" Name="LoadBtn" Click="LoadBtn_Click">Load more</Button>
         </StackPanel>
     </Grid>
 </Window>
