--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -4,8 +4,7 @@
     width:100%;
     height:120px;
     display: block;
-    /*margin-left:-8px;*/
-    /*margin-right:-8px;*/
+    z-index: 1000;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
@@ -16,6 +15,12 @@
     .headerContainer.smaller {
         -ms-opacity:0.9;
         opacity:0.9;
+        height:60px;
+    }
+
+    .headerContainer.smaller1 {
+        -ms-opacity:1 !important;
+        opacity:1 !important;
         height:60px;
     }
 
@@ -148,7 +153,6 @@
 .settings-dropdown img {
     max-height: 70px;
     max-width: 70px;
-    /*margin-left: 10px;*/
     -ms-border-radius: 50%;
     border-radius: 50%;
     left: 40%;
@@ -163,9 +167,9 @@
 .profile-buttons button {
     -ms-border-radius: 0;
     border-radius: 0;
-    -webkit-box-shadow: 4px 6px 12px rgba(0, 0, 0, 0.4);
-    -ms-box-shadow: 4px 6px 12px rgba(0, 0, 0, 0.4);
-    box-shadow: 4px 6px 12px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+    -ms-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .hvr-underline-from-center:before {
