--- a/WebTrivialWiki/app/styles/settings/settings.css
+++ b/WebTrivialWiki/app/styles/settings/settings.css
@@ -1,134 +1,129 @@
 ﻿.fa-2x {
-font-size: 2em;
+    font-size: 2em;
 }
 .fa {
-position: relative;
-display: table-cell;
-width: 60px;
-height: 36px;
-text-align: center;
-vertical-align: middle;
-font-size:20px;
+    position: relative;
+    display: table-cell;
+    width: 60px;
+    height: 36px;
+    text-align: center;
+    vertical-align: middle;
+    font-size:20px;
 }
 
-
-/*.main-menu:hover,nav.main-menu.expanded {
-width:250px;
-overflow:visible;
-}*/
-
 .main-menu {
-	/*background:#0F0F0F;*/
-/*background: url(../../../images/blackBackground.jpg);*/
-border-right:1px solid #ccc;
-position:absolute;
-top:119px;
-bottom:0;
-height:calc(100% - 120px);
-left:0;
-/*width:60px;*/
-overflow:hidden;
--webkit-transition:width .05s linear;
-transition:width .05s linear;
--webkit-transform:translateZ(0) scale(1,1);
-z-index:1000;
-width:250px;
-overflow:visible;
+    top: 90px;
+    width: 15%;
+    -moz-min-width: 60px !important;
+    -ms-min-width: 60px !important;
+    -o-min-width: 60px !important;
+    -webkit-min-width: 60px !important; 
+    min-width: 60px !important;
+    border-right:1px solid #ccc;
+    position:absolute;
+    height:calc(100% - 120px);
+    left:0;
+    overflow:hidden;
+    -webkit-transition:width .05s linear;
+    transition:width .05s linear;
+    -webkit-transform:translateZ(0) scale(1,1);
+    z-index:-1;
+    overflow:visible;
+    font-family: Monserrat;
 	-webkit-box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.2);
 	-ms-box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.2);
 	box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.2);
 }
 
 .main-menu>ul {
-margin:7px 0;
+    margin:7px 0;
 }
 
 .main-menu li {
-position:relative;
-display:block;
-width:250px;
+    position:relative;
+    display:block;
 }
 
 .main-menu li>a {
-position:relative;
-display:table;
-border-collapse:collapse;
-border-spacing:0;
-color:black;
- font-family: arial;
-font-size: 14px;
-text-decoration:none;
--webkit-transform:translateZ(0) scale(1,1);
--webkit-transition:all .1s linear;
-transition:all .1s linear;
-  
+    position:relative;
+    display:table;
+    border-collapse:collapse;
+    border-spacing:0;
+    color:black;
+     font-family: arial;
+    font-size: 14px;
+    text-decoration:none;
+    -webkit-transform:translateZ(0) scale(1,1);
+    -webkit-transition:all .1s linear;
+    transition:all .1s linear;
 }
 
 .main-menu .nav-icon {
-position:relative;
-display:table-cell;
-width:60px;
-height:36px;
-text-align:center;
-vertical-align:middle;
-font-size:18px;
+    position:absolute;
+    display:table-cell;
+    width:60px;
+    height:36px;
+    text-align:center;
+    vertical-align:middle;
+    font-size:18px;
 }
 
 .main-menu .nav-text {
-position:relative;
-display:table-cell;
-vertical-align:middle;
-width:190px;
-  font-family: 'Titillium Web', sans-serif;
+    position:relative;
+    display:table-cell;
+    vertical-align:middle;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 .main-menu>ul.logout {
-position:absolute;
-left:0;
-bottom:0;
+    position:absolute;
+    width: 100%;
+    left:0;
+    bottom:0;
 }
 
-.no-touch .scrollable.hover {
-overflow-y:hidden;
+.has-subnav span:hover {
+    color: white;
+    background-color: #5fa2db;
 }
-
-.no-touch .scrollable.hover:hover {
-overflow-y:auto;
-overflow:visible;
+.pointer-cursor {
+    width: 100%;
+}
+.pointer-cursor:hover {
+    color: white;
+    background-color: #5fa2db;
 }
 
 a:hover,a:focus {
-text-decoration:none;
+    color: white;
+    text-decoration:none;
 }
 
 nav {
--webkit-user-select:none;
--moz-user-select:none;
--ms-user-select:none;
--o-user-select:none;
-user-select:none;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    -o-user-select:none;
+    user-select:none;
 }
 
 nav ul,nav li {
-outline:0;
-margin:0;
-padding:0;
+    outline:0;
+    margin:0;
+    padding:0;
 }
-.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-color:#fff;
-background-color:#5fa2db;
-}
+
 .area {
-float: left;
-background: #e2e2e2;
-width: 100%;
-height: 100%;
+    float: left;
+    background: #e2e2e2;
+    width: 100%;
+    height: 100%;
 }
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+
+@media only screen and (max-width: 750px) {
+    .nav-text {
+        display: none !important;
+    }
 }
 
 .settings-container {
