--- a/WebTrivialWiki/app/styles/settings/settings.css
+++ b/WebTrivialWiki/app/styles/settings/settings.css
@@ -30,9 +30,9 @@
     z-index:-1;
     overflow:visible;
     font-family: Monserrat;
-	-webkit-box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.2);
-	-ms-box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.2);
-	box-shadow: 1px 2px 16px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	-ms-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .main-menu>ul {
@@ -147,7 +147,10 @@ nav ul,nav li {
 }
 
 .caption {
-	background-color: #5fa2db;
+    left: 0;
+    background-color: black;
+    -ms-opacity: 0.7;
+    opacity: 0.7;
 	position: absolute;
 	color: #fff;
 	z-index: 100;
@@ -156,7 +159,6 @@ nav ul,nav li {
 	-o-transition: all 300ms ease-out;
 	-ms-transition: all 300ms ease-out;	
 	transition: all 300ms ease-out;
-	left: 0;
 }
 
 .simple-caption {
@@ -198,8 +200,8 @@ nav ul,nav li {
 	-moz-transform: translateY(-100%);
 	-o-transform: translateY(-100%);
 	-webkit-transform: translateY(-100%);
-	-ms-opacity: 1;
-	opacity: 1;
+	-ms-opacity: 0.7;
+	opacity: 0.7;
 	-ms-transform: translateY(-100%);
 	transform: translateY(-100%);
 }
@@ -223,4 +225,19 @@ nav ul,nav li {
 
 .image-uploader {
 	display: none !important;
+}
+
+.change-avatar-modal {
+    margin-bottom: 14%;
+}
+
+.avatar-canvas {
+    margin-left: 8%; 
+    margin-top: 8%;
+}
+
+.crop-avatar-button {
+    margin-top: 15px; 
+    margin-right: 8%; 
+    float: right;
 }
