--- a/WebTrivialWiki/app/styles/trivia/chat.css
+++ b/WebTrivialWiki/app/styles/trivia/chat.css
@@ -1,24 +1,14 @@
 ﻿.chat-container {
-    position: absolute;
     float: right;
     top: 125px;
-    right: 7px;
-    height: calc(100% - 140px);
-    width: 19%;
-    -ms-opacity: 0.5;
-    opacity: 0.5;
+    margin-top: 80px; 
+    margin-right: 15px; 
+    height: 90%;
     background-color: #fff;
     -webkit-box-shadow: 1px 2px 12px rgba(0, 0, 0, 0.4);
     -ms-box-shadow: 1px 2px 12px rgba(0, 0, 0, 0.4);
     box-shadow: 1px 2px 12px rgba(0, 0, 0, 0.4);
 }
-
-/*.show-users-icon span:first-child {
-    font-size: 30px;
-    margin-top: 10px;
-    margin-right: 40px;
-    float: right;
-}*/
 
 .users-container {
     position: absolute;
@@ -27,10 +17,121 @@
     overflow: hidden;
 }
 
-/*.users-container .user-picture {
-    font-size: 40px;
-    margin-right: 5px;
-    height: 40px;
-    width: 40px;
-    margin-bottom: 15px;
+.icon-addon {
+    position: relative;
+    color: #555;
+    display: block;
+}
+
+.icon-addon:after,
+.icon-addon:before {
+    display: table;
+    content: " ";
+}
+
+.icon-addon:after {
+    clear: both;
+}
+
+.icon-addon.addon-md .glyphicon,
+.icon-addon .glyphicon, 
+.icon-addon.addon-md .fa,
+.icon-addon .fa {
+    position: absolute;
+    z-index: 2;
+    left: 10px;
+    font-size: 14px;
+    width: 20px;
+    margin-left: -2.5px;
+    text-align: center;
+    padding: 10px 0;
+    top: 1px
+}
+
+.icon-addon.addon-md .form-control,
+.icon-addon .form-control {
+    float: left;
+    font-weight: normal;
+}
+
+/*.icon-addon .form-control:focus + .glyphicon,
+.icon-addon:hover .glyphicon,
+.icon-addon .form-control:focus + .fa,
+.icon-addon:hover .fa {
+    color: #2580db;
 }*/
+
+.send-message-container {
+    padding-top: 5px; 
+    padding-bottom: 5px; 
+    top: -5px; 
+}
+
+.send-message-button{
+    height: 34px !important; 
+    border: 0;
+    margin-top: 3px;
+}
+
+.send-message-button:hover,
+.send-message-button:active,
+.send-message-button:focus {
+    background-color: white;
+    color: #337ab7;
+    outline:none !important;
+    -webkit-appearance:none;
+    -webkit-box-shadow: none !important;
+    -ms-box-shadow: none !important;
+    box-shadow: none !important;
+    border-color: inherit;
+}
+
+.send-message-gliphy {
+    height: auto !important;
+}
+
+.chat-input {
+    border-top: none !important; 
+    border-left: none !important; 
+    border-right: none !important; 
+    border-bottom: 1px solid #ccc;
+    -webkit-appearance:none;
+    -webkit-box-shadow: none !important;
+    -ms-box-shadow: none !important;
+    box-shadow: none !important;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.chat-input:focus,
+.chat-input:active,
+.chat-input:hover {
+    outline:none !important;
+    -webkit-appearance:none;
+    -webkit-box-shadow: none !important;
+    -ms-box-shadow: none !important;
+    box-shadow: none !important;
+    border-color: inherit;
+    /*border: none;
+    text-decoration: none;*/
+}
+
+.chat-messages::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    background-color: white;
+    /*-ms-border-radius: 10px;
+    border-radius: 10px;*/
+}
+
+.chat-messages::-webkit-scrollbar {
+    width: 5px;
+}
+
+.chat-messages::-webkit-scrollbar-thumb {
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
+    background-color: #ccc;
+    border-radius: 4px;
+}
