--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -57,8 +57,9 @@
     }
 
 .wikiLogo {
+    position: absolute;
     height:100%;
-    margin-bottom: 30px;
+    width: 100%;
     display: block;
     background: url('../images/blackBackground.jpg');
     -ms-background-size: cover;
@@ -167,9 +168,6 @@
 .profile-buttons button {
     -ms-border-radius: 0;
     border-radius: 0;
-    -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-    -ms-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .hvr-underline-from-center:before {
