--- a/WebTrivialWiki/app/styles/settings/settings.css
+++ b/WebTrivialWiki/app/styles/settings/settings.css
@@ -120,19 +120,14 @@ nav ul,nav li {
     height: 100%;
 }
 
-@media only screen and (max-width: 750px) {
-    .nav-text {
-        display: none !important;
-    }
-}
-
 .settings-container {
 	position: absolute;
+    top: 89px !important;
+    left: 20% !important;
 	z-index: -1;
-	left: 300px;
-	margin-top: 30px;
 	width: 60%;
 }
+
 
 .setting-body{
 	max-height: 600px;
@@ -162,12 +157,17 @@ nav ul,nav li {
 }
 
 .simple-caption {
-	height: 30px;
+    height: 30px;
 	width: 200px;
 	display: block;
 	bottom: -30px;
 	line-height: 25pt;
 	text-align: center;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
 }
 
 .simple-caption p {
@@ -175,7 +175,7 @@ nav ul,nav li {
 }
 
 .box {
-	cursor: pointer;
+    cursor: pointer;
 	height: 200px;
 	float: left;
 	position: relative;
@@ -184,6 +184,11 @@ nav ul,nav li {
 	-webkit-box-shadow: 1px 1px 1px 1px #ccc;
 	-moz-box-shadow: 1px 1px 1px 1px #ccc;
 	box-shadow: 1px 1px 1px 1px #ccc;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
 }
 
 .box img {
@@ -240,4 +245,40 @@ nav ul,nav li {
     margin-top: 15px; 
     margin-right: 8%; 
     float: right;
+}
+
+@media only screen and (max-width: 750px) {
+    .nav-text {
+        display: none !important;
+    }
+    .header-container {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .settings-container {
+        width: 55% !important;
+    }
+    .box {
+        height: 150px !important;
+        width: 150px !important;
+    }
+    .box img {
+        max-height: 150px !important;
+        max-width: 150px !important;
+    }
+    .simple-caption {
+        width: 150px !important;
+    }
+    .header-container {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+}
+@media only screen and (max-width: 325px) {
+    .settings-container {
+        display: none !important;
+    }
 }
