--- a/WebTrivialWiki/app/views/about.html
+++ b/WebTrivialWiki/app/views/about.html
@@ -1,216 +1,217 @@
-aaa
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>aaa
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-aaa
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-aaa
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-aaa
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-aaa
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
+<div class="main-page">
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>aaa
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    aaa
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    aaa
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    aaa
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    aaa
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
 
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
-<p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+    <p>This is the about view.</p>
+</div>
