--- a/WebTrivialWiki/app/styles/general.css
+++ b/WebTrivialWiki/app/styles/general.css
@@ -45,6 +45,14 @@
     margin-top: 0 !important;   
 }
 
+.negative-margin-top {
+    margin-top: -20px !important;
+}
+
+.red-color {
+    color: #cc1935;
+}
+
 .center-modal {
     position: fixed;
     top:5%;
@@ -102,4 +110,16 @@
     margin-left: 46%;
     border: 2px solid #000 !important;
     border-bottom-color: transparent !important;
+}
+
+.main-page {
+    position: absolute;
+    margin-top: 15% !important;
+    width: 100%;
+    height: 60%;
+    background-repeat: no-repeat;
+    margin-top: 110px;
+    background-image: url('../images/pic.jpg');
+    background-position: center;
+    background-attachment: fixed;
 }
