--- a/WebTrivialWiki/app/styles/trivia/generalTrivia.css
+++ b/WebTrivialWiki/app/styles/trivia/generalTrivia.css
@@ -10,8 +10,30 @@
 	top: 75px; 
 	width: 75%; 
 	height: 70%; 
-	overflow: auto;
 	-webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
 	-ms-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
 	box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.triviaQuestions {
+    position: relative;
+    height: 88%; 
+    overflow: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.triviaQuestions::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    background-color: white;
+}
+
+.triviaQuestions::-webkit-scrollbar {
+    width: 5px;
+}
+
+.triviaQuestions::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
 }
